--- a/article3.html
+++ b/article3.html
@@ -8,11 +8,35 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="keywords"
-        content="Digital marketing,Graphic design,Logo design,website design,Social media marketing,Video editing" />
+    <meta name="keywords" content="digital marketing, online advertising, social media marketing, content marketing,
+         email marketing, search engine optimization (SEO), pay-per-click (PPC) advertising, 
+         conversion optimization, online branding, mobile marketing, e-commerce marketing, 
+         lead generation, online reputation management, influencer marketing, video marketing, 
+         logo design, brand identity, logo creation, logo branding, logo concepts, logo customization, 
+         company logo design, business logo design, logo redesign, logo refresh, logo typography, 
+         logo color schemes, logo symbolism, graphic design, visual design, graphic artwork, creative design, 
+         print design, digital illustrations, infographics, typography, brochure design, flyer design, 
+         poster design, packaging design, branding design, visual identity, website design, responsive design, 
+         user experience (UX) design, user interface (UI) design, web development, website optimization, 
+         mobile-friendly design, website templates, custom web design, website maintenance, CMS (Content Management System),
+         wireframing, landing page design, website redesign, search engine optimization, on-page SEO, off-page SEO,
+         keyword research, SEO analysis, organic traffic, link building, SEO audit, SEO strategy, meta tags,
+         SEO content writing, backlink analysis, local SEO, SEO reporting, web analytics, data analysis, 
+         website tracking, traffic analysis, conversion tracking, goal tracking, user behavior analysis, 
+         funnel analysis, A/B testing, ROI measurement, audience segmentation, campaign performance analysis, 
+         heatmaps, click-through rates (CTR)." />
     <meta name="description" content="Digital Marketing Company & Institute" />
     <meta name="author" content="Kreative_Kudi" />
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-07TVKQ6ZQL"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-07TVKQ6ZQL');
+    </script>
     <!-- Title  -->
     <title>Kreative_kudi</title>
 
