--- a/Owner.html
+++ b/Owner.html
@@ -7,8 +7,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="keywords"
-        content="digital marketing, online advertising, social media marketing, content marketing,
+    <meta property='og:image' content='https://i.ibb.co/5j6QYTP/face-c2.png' />
+    <meta property=' og:image:width' content='1200' />
+    <meta property='og:image:height' content='1200' />
+    <meta property="og:type" content='website' />
+    <meta name="keywords" content="digital marketing, online advertising, social media marketing, content marketing,
          email marketing, search engine optimization (SEO), pay-per-click (PPC) advertising, 
          conversion optimization, online branding, mobile marketing, e-commerce marketing, 
          lead generation, online reputation management, influencer marketing, video marketing, 
