--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta property='og:image' content='https://i.ibb.co/5j6QYTP/face-c2.png' />
+    <meta property=' og:image:width' content='1200' />
+    <meta property='og:image:height' content='1200' />
+    <meta property="og:type" content='website' />
     <meta name="keywords" content="digital marketing, online advertising, social media marketing, content marketing,
          email marketing, search engine optimization (SEO), pay-per-click (PPC) advertising, 
          conversion optimization, online branding, mobile marketing, e-commerce marketing, 
@@ -25,7 +29,7 @@
          funnel analysis, A/B testing, ROI measurement, audience segmentation, campaign performance analysis, 
          heatmaps, click-through rates (CTR)." />
     <meta name="description" content="Digital Marketing Company & Institute" />
-    <meta name="author" content="Kreative_Kudi" />
+    <meta name="author" content="kreativekudi.com" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-07TVKQ6ZQL"></script>
