--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,16 @@
          website tracking, traffic analysis, conversion tracking, goal tracking, user behavior analysis, 
          funnel analysis, A/B testing, ROI measurement, audience segmentation, campaign performance analysis, 
          heatmaps, click-through rates (CTR)." />
-    <meta name="description" content="Digital Marketing Company & Institute" />
+    <meta name="description" content="Digital Marketing Company & Institute,Transform your online presence 
+        with our comprehensive digital marketing solutions. Specializing in SEO, 
+        social media management, and content marketing, we maximize brand visibility and drive targeted traffic to your website. 
+        Partner with our expert agency to boost online success through strategic PPC campaigns and data-driven SEO strategies. 
+        Our tailored marketing solutions deliver measurable results, helping grow your business. 
+        Gain a competitive edge with results-oriented services such as website optimization, social media advertising,
+        and engaging content creation. Enhance brand identity and increase customer engagement through captivating logo design,
+        graphic design, and effective brochure design. Our top-notch services help you reach and connect with your audience across multiple platforms. 
+        Unlock the power of data-driven marketing through web analytics, conversion optimization, and targeted advertising, 
+        maximizing ROI. Let us optimize your online presence and drive business growth."/>
     <meta name="author" content="Kreative_Kudi" />
 
     <!-- Google tag (gtag.js) -->
