--- a/Institute.html
+++ b/Institute.html
@@ -52,7 +52,8 @@
 
 
     <!-- Title  -->
-    <title>Kreative_Kudi</title>
+    <title>Kreative kudi Institute-Your Graphic Designing Institute of Choice | Hands-On Learning, Limitless Creativity
+    </title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="personal logo/face c2.png" />
