--- a/Owner.html
+++ b/Owner.html
@@ -51,7 +51,7 @@
     </script>
 
     <!-- Title  -->
-    <title>Kreative_Kudi</title>
+    <title>Kreative kudi-Empowering Your Digital Presence | Owner & CEo</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="personal logo/face c2.png" />
