--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
     </script>
 
     <!-- Title  -->
-    <title>Kreative_kudi</title>
+    <title>Kreative kudi-Elevate Your Brand with Graphic Design and Digital Marketing | About us</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="personal logo/face c2.png" />
