--- a/article2.html
+++ b/article2.html
@@ -51,7 +51,7 @@
         gtag('config', 'G-07TVKQ6ZQL');
     </script>
     <!-- Title  -->
-    <title>Kreative_kudi</title>
+    <title>Kreative kudi-Potential of Graphic Design and Digital Marketing | Article</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="personal logo/face c2.png" />
