--- a/articles.html
+++ b/articles.html
@@ -52,7 +52,7 @@
     </script>
 
     <!-- Title  -->
-    <title>Kreative_kudi</title>
+    <title>Kreative kudi-Designing the Future of Marketing | Articles</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="personal logo/face c2.png" />
