--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
     </script>
 
     <!-- Title  -->
-    <title>Kreative_kudi</title>
+    <title>Kreative kudi-Where Creativity Meets Strategy | Contact us</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="personal logo/face c2.png" />
