--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
     </script>
 
     <!-- Title  -->
-    <title>Kreative_kudi</title>
+    <title>Kreative kudi-Your Gateway to Digital Success | Work</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="personal logo/face c2.png" />
