--- a/article1.html
+++ b/article1.html
@@ -51,7 +51,7 @@
         gtag('config', 'G-07TVKQ6ZQL');
     </script>
     <!-- Title  -->
-    <title>Kreative_kudi</title>
+    <title>kreative kudi-Crafting Brands for the Digital Age | Article</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="personal logo/face c2.png" />
