--- a/article3.html
+++ b/article3.html
@@ -51,7 +51,7 @@
         gtag('config', 'G-07TVKQ6ZQL');
     </script>
     <!-- Title  -->
-    <title>Kreative_kudi</title>
+    <title>Kreative kudi-Driving Digital Growth through Cutting-Edge Marketing Solutions | Article</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="personal logo/face c2.png" />
