--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </script>
 
     <!-- Title  -->
-    <title>Kreative_Kudi</title>
+    <title>Kreative kudi-Transforming Ideas into Visual Masterpieces | Home</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="personal logo/face c2.png" />
