--- a/Institute.html
+++ b/Institute.html
@@ -38,7 +38,7 @@
         graphic design, and effective brochure design. Our top-notch services help you reach and connect with your audience across multiple platforms. 
         Unlock the power of data-driven marketing through web analytics, conversion optimization, and targeted advertising, 
         maximizing ROI. Let us optimize your online presence and drive business growth." />
-    <meta name="author" content="Kreative_Kudi" />
+    <meta name="author" content="Kreative Kudi Digital Marketing Institute" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-07TVKQ6ZQL"></script>
@@ -52,8 +52,7 @@
 
 
     <!-- Title  -->
-    <title>Kreative kudi Institute-Your Graphic Designing Institute of Choice | Hands-On Learning, Limitless Creativity
-    </title>
+    <title>Your Graphic Designing Institute of Choice | Hands-On Learning, Limitless Creativity</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="personal logo/face c2.png" />
