--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         graphic design, and effective brochure design. Our top-notch services help you reach and connect with your audience across multiple platforms. 
         Unlock the power of data-driven marketing through web analytics, conversion optimization, and targeted advertising, 
         maximizing ROI. Let us optimize your online presence and drive business growth." />
-    <meta name="author" content="kreativekudi.com" />
+    <meta name="author" content="Kreative Kudi Digital Marketing Company" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-07TVKQ6ZQL"></script>
@@ -51,7 +51,7 @@
     </script>
 
     <!-- Title  -->
-    <title>Kreative kudi-Transforming Ideas into Visual Masterpieces | Home</title>
+    <title>Kreative kudi-Transforming Ideas into Visual Masterpieces</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="personal logo/face c2.png" />
