--- a/index.html
+++ b/index.html
@@ -327,6 +327,38 @@
                         </div>
                     </div>
                 </div>
+
+
+                <div class="row">
+                    <div class="col-lg-4 wow fadeInLeft" data-wow-delay=".5s">
+                        <div class="item-box md-mb50">
+                            <span class="icon pe-7s-graph1"></span>
+                            <h6>Dive into Data: Uncover Insights</h6>
+                            <p>unlock trends, and transform raw
+                                numbers into actionable insights. Ready to make informed decisions? Let's analyze,
+                                strategize, and drive success
+                                together.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 wow fadeInLeft" data-wow-delay=".7s">
+                        <div class="item-box md-mb50">
+                            <span class="icon pe-7s-diskette"></span>
+                            <h6>Email & WhatsApp Marketing</h6>
+                            <p>Experience the future of marketing with Kreative Kudi. From inbox to instant messages, we
+                                craft campaigns that connect
+                                and convert. Let's transform your strategy!</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 wow fadeInLeft" data-wow-delay=".9s">
+                        <div class="item-box">
+                            <span class="icon pe-7s-display2"></span>
+                            <h6>Content writing</h6>
+                            <p>Experience the future of content creation with Kreative Kudi's AI writing services.we
+                                harness the power of AI to deliver content that resonates and
+                                engages. Let's shape your brand</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
