--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
                             <span class="icon">
                                 <i class="ion-ios-bolt-outline"></i>
                             </span>
-                            <h5>Standerd ~ 3 month</h5>
+                            <h5>Standard ~ 3 month</h5>
                             <h5>In just 18000/-</h5>
                             <p>3 Post/Week</p>
                             <P>3 Stories/Week</P>
